@@ -7,7 +7,6 @@ import io.cucumber.java.ParameterType;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class ParameterTypes
 {
@@ -31,7 +30,7 @@ public class ParameterTypes
     public List<String> courses(String rawCourses)
     {
         return Arrays.stream(rawCourses.split(","))
-                .map(String::trim).collect(Collectors.toList());
+                .map(String::trim).toList();
     }
 
     @DataTableType
